# Omni_AI

./: .gitignore  README.md  SPEC.md
ai-gateway/: .env.example  docker-compose.yml
ai-gateway/backend/: pyproject.toml
ai-gateway/backend/alembic/: env.py
ai-gateway/backend/app/: main.py
ai-gateway/backend/app/api/: admin.py  health.py  providers.py
ai-gateway/backend/app/core/: config.py  logging.py  security.py
ai-gateway/backend/app/db/: bootstrap.py  models.py  session.py
ai-gateway/backend/app/discovery/: scanner.py
ai-gateway/backend/app/providers/: gemini.py  groq.py  huggingface.py  openrouter.py  pollinations.py
ai-gateway/backend/app/router/: engine.py
ai-gateway/backend/tests/: fakes.py  test_chat_integration_real_adapter.py  test_discovery_pipeline_integration.py  test_discovery_scanner.py  test_providers_endpoint.py  test_security.py
ai-gateway/backend/tests/providers/: __init__.py  test_deepseek.py  test_gemini.py  test_groq.py  test_openrouter.py
ai-gateway/frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
ai-gateway/frontend/src/: app.html  service-worker.ts
ai-gateway/frontend/static/: manifest.json
backend/: .gitignore  Dockerfile
backend/alembic/versions/: 7bb2ed54bd4d_initial_schema.py
backend/app/: main.py
backend/app/api/: auth.py  (+4 more)
backend/tests/: conftest.py  test_admin_provider_toggle.py  test_bootstrap.py  test_chat_endpoint.py  test_circuit_breaker.py  test_health_status_endpoint.py  test_models_endpoint.py  test_router_engine.py  test_router_resolve.py
frontend/src/: service-worker.ts
(+26 files in other folders)
